--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date"></span>
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="SQLQuery  Data Cleaning Project.sql">Data Cleaning in SQL<br />
 									</a></h2>
 									<p>In this project, we cleaned housing project in SQL Server<br />
 									<br />
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="SQLQuery  Data Cleaning Project.sql" class="image main"><img src="images/housing.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="SQLQuery  Data Cleaning Project.sql" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
