--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 										<h2><a href="#">Augue lorem<br />
 										primis vestibulum</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/MPowerBI.jpg" alt="" /></a>
+									<a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/commit/4f0f5394d021b398369a57fb2e132e8102b53562#commitcomment-52752044" class="image fit"><img src="images/MPowerBI.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/commit/4f0f5394d021b398369a57fb2e132e8102b53562#commitcomment-52752044" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
