--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 										<h2><a href="#">dashboards Creation, Visualization and Analysis <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Power BI.png" alt="" /></a>
+									<a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md" class="image fit"><img src="images/Power BI.png" alt="" /></a>
 									<p>This folder shows all my PowerBI pojects, reports and dashboards, which includes, Market Segmentation, Sales, Inventory, Revenue and so many others.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Projects</a></li>
+										<li><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
