--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">dashboards Creation, Visualization and Analysis <br />
+										<h2><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md">dashboards Creation, Visualization and Analysis <br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md" class="image fit"><img src="images/Power BI.png" alt="" /></a>
