--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md">dashboards Creation, Visualization and Analysis <br />
+										<h2><a href="https://github.com/Chris-22ozor/ChrisTheAnalystPortfolio.github.io/commit/922ed25a3fdf9f8fd7b6e53ecaf14b03dad1e6a3">dashboards Creation, Visualization and Analysis <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BII-Tableau-/blob/main/README.md" class="image fit"><img src="images/Power BI.png" alt="" /></a>
+									<a href="https://github.com/Chris-22ozor/ChrisTheAnalystPortfolio.github.io/commit/922ed25a3fdf9f8fd7b6e53ecaf14b03dad1e6a3" class="image fit"><img src="images/Power BI.png" alt="" /></a>
 									<p>This folder shows all my PowerBI pojects, reports and dashboards, which includes, Market Segmentation, Sales, Inventory, Revenue and so many others.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/blob/main/README.md" class="button">View Projects</a></li>
+										<li><a href="https://github.com/Chris-22ozor/ChrisTheAnalystPortfolio.github.io/commit/922ed25a3fdf9f8fd7b6e53ecaf14b03dad1e6a3" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
