--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
@@ -41,7 +41,7 @@
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="linkedin.com/in/christian-ozoemene-996956b3 " class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="linkedin.com/in/christian-ozoemene-996956b3 " class="icon brands alt fa-linkedin"><span class="label">linkedIn</span></a></li>
 									<li><a href="https://github.com/Chris-22ozor" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 		
 						</ul>
@@ -107,13 +107,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Amazon Web Scraper with Python<br />
+										<h2><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/commit/4f0f5394d021b398369a57fb2e132e8102b53562#commitcomment-52752044">Dashboards, Visualizations, Analysis<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>In this project we scrape the data from Amazon to analyze price data for products</p>
+									<a href="#" class="image fit"><img src="images/Power BI.png" alt="" /></a>
+									<p>This folder shows all my PowerBI pojects, reports and dashboards, which includes, Market Segmentation, Sales, Inventory, Revenue and so many others</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/Chris-22ozor/Data-Science-Portfolio-Power-BI-Tableau-/commit/4f0f5394d021b398369a57fb2e132e8102b53562#commitcomment-52752044" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
